[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/img/kenney_inputPromptsPixel16Ã—/Tiles/tile_0010.png" type="Texture" id=1]
[ext_resource path="res://src/v1/UIDialogues.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "text"
length = 1.2
tracks/0/type = "bezier"
tracks/0/path = NodePath("UI/TextBox/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.2 )
}

[node name="UIDialogues" type="Node"]
script = ExtResource( 2 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actor1" type="Control" parent="UI"]
anchor_left = 0.0292969
anchor_top = 0.118333
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 1.90735e-06
margin_top = -1.0
margin_right = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Actor2" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 0.116667
anchor_right = 0.970703
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackgroundRect" type="ColorRect" parent="UI"]
anchor_left = 0.0292969
anchor_top = 0.716667
anchor_right = 0.966797
anchor_bottom = 0.966667
margin_top = 3.05176e-05
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextBox" type="MarginContainer" parent="UI"]
anchor_left = 0.0585938
anchor_top = 0.761667
anchor_right = 0.944336
anchor_bottom = 0.918333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="RichTextLabel" parent="UI/TextBox"]
margin_right = 907.0
margin_bottom = 94.0

[node name="NextImage" type="TextureRect" parent="UI"]
visible = false
anchor_left = 0.917584
anchor_top = 0.884842
anchor_right = 0.964459
anchor_bottom = 0.963175
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Names" type="Control" parent="UI"]
anchor_left = 0.0292969
anchor_top = 0.611667
anchor_right = 0.966797
anchor_bottom = 0.716667
margin_bottom = 3.05176e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BlockName1" type="MarginContainer" parent="UI/Names"]
visible = false
anchor_top = 0.238095
anchor_right = 0.239583
anchor_bottom = 0.714286
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackgroundName" type="ColorRect" parent="UI/Names/BlockName1"]
margin_right = 230.0
margin_bottom = 30.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="UI/Names/BlockName1"]
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
align = 1

[node name="BlockName2" type="MarginContainer" parent="UI/Names"]
visible = false
anchor_left = 0.760417
anchor_top = 0.238095
anchor_right = 1.0
anchor_bottom = 0.714286
margin_right = -6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackgroundName" type="ColorRect" parent="UI/Names/BlockName2"]
margin_right = 230.0
margin_bottom = 30.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="UI/Names/BlockName2"]
margin_top = 8.0
margin_right = 230.0
margin_bottom = 22.0
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/text = SubResource( 1 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
